[package]
name = "classified"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chacha20poly1305 = "0.10.1"
clap = { version = "3.2.20", features = ["clap_derive", "derive", "wrap_help"] }
color-eyre = "0.6.2"
either = { version = "1.8.0", features = ["serde"] }
generic-array = { version = "0.14.6", features = ["serde"] }
indexmap = { version = "1.9.1", features = ["serde-1"] }
nix = { version = "0.25.0", features = ["user", "fs"] }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.85"
toml = "0.5.9"
