[package]
name = "classified"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bitvec = "1.0.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.4.5", features = ["derive", "wrap_help"] }
clap_complete = "4.4.2"
color-eyre = "0.6.2"
crc-any = "2.4.3"
either = { version = "1.8.0", features = ["serde"] }
generic-array = { version = "0.14.6", features = ["serde"] }
indexmap = { version = "1.9.1", features = ["serde-1"] }
itertools = "0.10.3"
nix = { version = "0.25.0", features = ["user", "fs"] }
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.85"
toml = "0.5.9"
zeroize = "1.5.7"

[dev-dependencies]
proptest = "1.0.0"
